--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.21.5",
+    "bootstrap": "^5.1.3",
     "next": "^12.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
