--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.5",
     "bootstrap": "^5.1.3",
     "next": "^12.2.0",
