--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "next": "^12.2.0",
     "react": "^18.2.0",
