--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "antd": "^4.21.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
