--- a/server/package.json
+++ b/server/package.json
@@ -4,23 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r esm server.js"
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
-    "cookie-parser": "^1.4.6",
+    "body-parser": "^1.19.1",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.0.1",
-    "esm": "^3.2.25",
-    "express": "^4.18.1",
-    "express-jwt": "^7.7.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "mongoose": "^6.1.2",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^2.0.15",
+    "request": "^2.88.2"
   }
 }
