--- a/client/package.json
+++ b/client/package.json
@@ -1,30 +1,57 @@
 {
   "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "author": "",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.7",
-    "antd": "^4.21.5",
-    "axios": "^0.27.2",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "ace-builds": "^1.4.14",
+    "assert": "^2.0.0",
     "bootstrap": "^5.1.3",
-    "express": "^4.18.1",
-    "http-proxy-middleware": "^2.0.6",
-    "next": "^12.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-toastify": "^9.0.5"
-  }
+    "buffer": "^6.0.3",
+    "chart.js": "^3.7.0",
+    "react": "^17.0.2",
+    "react-ace": "^9.5.0",
+    "react-bootstrap": "^2.0.4",
+    "react-chartjs-2": "^4.0.0",
+    "react-countup": "^6.1.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-page-progress": "^1.1.1",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
+    "react-spinners-kit": "^1.9.1",
+    "react-visibility-sensor": "^5.1.1",
+    "tableau-react": "^1.2.2",
+    "web-vitals": "^2.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:5000"
 }
